samples/_failures_safe/1761510336_e15848_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbbe9e7e.c: In function ‘main’:
./samples/SAFE/__tmp_fbbe9e7e.c:163:5: error: expected declaration or statement at end of input
  163 |     Token* tokens = NULL;
      |     ^~~~~
